--- a/Calculator/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Calculator/Base.lproj/Main.storyboard
@@ -65,22 +65,22 @@
                                                 <rect key="frame" x="103.5" y="0.0" width="103.5" height="122.5"/>
                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
-                                                <state key="normal" title="+/-">
+                                                <state key="normal" title="CE">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
                                                     <action selector="someButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="YYJ-5Y-a9k"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" tag="13" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="73h-b1-FDU">
+                                            <button opaque="NO" tag="14" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OqM-kk-nnc">
                                                 <rect key="frame" x="207" y="0.0" width="103.5" height="122.5"/>
                                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
-                                                <state key="normal" title="%">
+                                                <state key="normal" title=".">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="someButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="8JG-xV-Ly1"/>
+                                                    <action selector="someButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="FAD-Uh-gt0"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="19" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yO3-05-Vxf">
@@ -246,8 +246,12 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="tC2-9G-U0p">
                                         <rect key="frame" x="0.0" y="491" width="414" height="122.5"/>
                                         <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iiy-17-pfO">
+                                                <rect key="frame" x="0.0" y="0.0" width="103.5" height="122.5"/>
+                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q5v-d8-dvK">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="122.5"/>
+                                                <rect key="frame" x="103.5" y="0.0" width="103.5" height="122.5"/>
                                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
                                                 <state key="normal" title="0">
@@ -257,33 +261,21 @@
                                                     <action selector="someButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="YBd-Zd-hsN"/>
                                                 </connections>
                                             </button>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="bNM-6C-nq2">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="122.5"/>
-                                                <subviews>
-                                                    <button opaque="NO" tag="14" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OqM-kk-nnc">
-                                                        <rect key="frame" x="0.0" y="0.0" width="103.5" height="122.5"/>
-                                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
-                                                        <state key="normal" title=",">
-                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="someButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="FAD-Uh-gt0"/>
-                                                        </connections>
-                                                    </button>
-                                                    <button opaque="NO" tag="15" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9nR-nl-TNF">
-                                                        <rect key="frame" x="103.5" y="0.0" width="103.5" height="122.5"/>
-                                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
-                                                        <state key="normal" title="=">
-                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="someButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="bR8-PH-Zmj"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                            </stackView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cx4-tU-xJR">
+                                                <rect key="frame" x="207" y="0.0" width="103.5" height="122.5"/>
+                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                            <button opaque="NO" tag="15" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9nR-nl-TNF">
+                                                <rect key="frame" x="310.5" y="0.0" width="103.5" height="122.5"/>
+                                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
+                                                <state key="normal" title="=">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="someButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="bR8-PH-Zmj"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -308,12 +300,10 @@
                         <outlet property="workingLabel" destination="erh-UJ-cfm" id="Uuq-Zc-omp"/>
                         <outletCollection property="allButtons" destination="utx-Ks-dJq" collectionClass="NSMutableArray" id="z5F-f8-ndd"/>
                         <outletCollection property="allButtons" destination="UzI-qo-D54" collectionClass="NSMutableArray" id="KxG-wd-Tp8"/>
-                        <outletCollection property="allButtons" destination="73h-b1-FDU" collectionClass="NSMutableArray" id="1oN-3n-so3"/>
                         <outletCollection property="allButtons" destination="yO3-05-Vxf" collectionClass="NSMutableArray" id="CBM-cY-I0A"/>
                         <outletCollection property="allButtons" destination="UhR-hb-4sI" collectionClass="NSMutableArray" id="YYQ-pE-6zX"/>
                         <outletCollection property="allButtons" destination="ATU-gh-ljo" collectionClass="NSMutableArray" id="8ez-M1-at3"/>
                         <outletCollection property="allButtons" destination="MgK-g1-16p" collectionClass="NSMutableArray" id="Q2e-Kf-tBe"/>
-                        <outletCollection property="allButtons" destination="9nR-nl-TNF" collectionClass="NSMutableArray" id="Ivw-KN-pkr"/>
                         <outletCollection property="allButtons" destination="4j3-7H-8ny" collectionClass="NSMutableArray" id="e8x-u8-zvS"/>
                         <outletCollection property="allButtons" destination="ZId-ll-l9u" collectionClass="NSMutableArray" id="joC-yR-JFV"/>
                         <outletCollection property="allButtons" destination="NcL-dj-uTQ" collectionClass="NSMutableArray" id="e9V-8m-jhY"/>
@@ -325,11 +315,12 @@
                         <outletCollection property="allButtons" destination="KpS-aK-Tll" collectionClass="NSMutableArray" id="7g6-0L-8m0"/>
                         <outletCollection property="allButtons" destination="Q5v-d8-dvK" collectionClass="NSMutableArray" id="Iur-Jm-lUu"/>
                         <outletCollection property="allButtons" destination="OqM-kk-nnc" collectionClass="NSMutableArray" id="m5C-u0-OT3"/>
+                        <outletCollection property="allButtons" destination="9nR-nl-TNF" collectionClass="NSMutableArray" id="Ivw-KN-pkr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-335" y="44"/>
+            <point key="canvasLocation" x="-336.23188405797106" y="43.526785714285715"/>
         </scene>
     </scenes>
     <resources>
